--- a/bailab4/nbproject/project.properties
+++ b/bailab4/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/vonglap.jar
+dist.jar=${dist.dir}/bailab4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/vonglap
+dist.jlink.output=${dist.jlink.dir}/bailab4
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=vonglap
-main.class=pkgwhile.While
+jlink.launcher.name=bailab4
+main.class=bailab4.Bailab4
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
